--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Mahavir paints | Home Page</title>
+<title>Mahaveer paints | Home Page</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
@@ -232,16 +232,7 @@ document.onmouseup = mousehandler;
                                     </div>
             </div>
         </div>
-          <!-- BEGIN JIVOSITE CODE {literal} -->
-<script type='text/javascript'>
-(function(){ var widget_id = 'gdP1HEEjkJ';var d=document;var w=window;function l(){
-  var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-  s.src = '//code.jivosite.com/script/widget/'+widget_id
-    ; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}
-  if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}
-  else{w.addEventListener('load',l,false);}}})();
-</script>
-<!-- {/literal} END JIVOSITE CODE -->
+          
     </footer>
     
 </div>
