--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Mahavir paints | Contact Us</title>
+<title>Mahaveer paints | Contact Us</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
