--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Mahavir paints | About Us</title>
+<title>Mahaveer paints | About Us</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
