--- a/contactus.html
+++ b/contactus.html
@@ -149,7 +149,7 @@
         </a>
         <div class="navbar-links">
           <ul>
-            <li><a href="indexx.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="contactus.html">Contact</a></li>
