--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Mahaveer Paints</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">The Best place for paints.</h2>
-                        <a class="btn btn-primary" href="#about">Products</a>
+                        <a class="btn btn-primary" href="products.html">Products</a>
                     </div>
                 </div>
             </div>
