--- a/contactus.html
+++ b/contactus.html
@@ -252,7 +252,8 @@
 
                                 <a href="https://instagram.com/mahaveerpaintindustries?igshid=1kun7pmtrues4" target="_blank"><i class="fa fa-instagram" style="font-size:36px; padding: 10px"></i></a>
 
-                                  <a href="https://wa.me/9425203718" class="whatsapp img-circle" target="_blank"><i class="fa fa-whatsapp" style="font-size:36px ; padding: 10px"></i></a>
+                                  <a href="https://api.whatsapp.com/send?phone=9425203718" class="whatsapp img-circle" target="_blank"><i class="fa fa-whatsapp" style="font-size:36px ; padding: 10px"></i></a>
+
 
             
                               
@@ -309,7 +310,7 @@
     text-align: center;color:white"></span></a>
                                         <a href="https://instagram.com/mahaveerpaintindustries?igshid=1kun7pmtrues4" class="instagram img-circle" target="_blank"><span class="fa fa-instagram" style="padding-top: 7px;
     text-align: center; color:white;"></span></a>
-                                       <a href="https://wa.me/9425203718" class="whatsapp img-circle" target="_blank"><span class="fa fa-whatsapp" style="padding-top: 7px;
+                                      <a href="https://api.whatsapp.com/send?phone=9425203718" class="whatsapp img-circle" target="_blank"><span class="fa fa-whatsapp" style="padding-top: 7px;
     text-align: center;color:white"></span></a>
                                         <!--<a href="#" class="google-plus img-circle"><span class="fa fa-google-plus"></span></a>
                                         <a href="#" class="linkedin img-circle"><span class="fa fa-pinterest-p"></span></a>
