--- a/products.html
+++ b/products.html
@@ -249,7 +249,7 @@
                     <div class="product-grid">
             <div class="product-image">
                 <a href="#" class="image">
-                    <img class="pic-1" src="images/photos/emulsion-interior.jpg">
+                    <img class="pic-1" src="images/ext_Eml-removebg-preview.png">
                 </a>
                 <ul class="product-links">
                     <li><a href="#"><i class="fa fa-shopping-bag"></i>1/4/10/20 lt.</a></li>
