--- a/products.html
+++ b/products.html
@@ -356,7 +356,7 @@ background:linear-gradient(-56deg, rgb(248, 173, 92) 29%, rgb(255, 115, 0) 29.1%
             <div class="banner">
                 <div class="shoe">
                     <img src="images/Distemper-Bucket-removebg-preview.png" alt=""><br>
-                    <button class="btn" id="button">Acrylic Distemper</button>
+                    <button class="btn" id="button">Cow Dung Distemper</button>
                 </div>
                 <div class="shoe">
                     <img src="images/Primer-Bucket-removebg-preview.png" alt=""><br>
