--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                   <!--         <h4 class="modal-title">Modal Header</h4> -->
                 </div>
-                <div class="modal-body text-center">
+               <div class="modal-body text-center">
                   <h1>Newly Launched!</h1>
-                  <p style="color: white;">CowDung Paint- the Best Organic paint!</p>
-                  <img src="images/Newly Launched.JPG" style="max-width:70%; min-width: 40%;">
+                <!----  <p style="color: white;">CowDung Paint- the Best Organic paint!</p>-->
+                  <img src="images/Launch-Poster-MP-raipur.jpg" style="max-width:70%; min-width: 40%;">
               
                 </div>
                 <div class="modal-footer">
