--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>Mahaveer paints | Our Products</title>
+<title>Mahaveer paints | About us</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/revolution-slider.css" rel="stylesheet">
@@ -217,7 +217,7 @@
                     <h4></h4>
                     <p align="justify">Mahaveer Paints is a leading producers of paints and other products in Raipur, Chhatisgarh . We are producing high quality paints at affordable prices, hence we are in a commendable position in the market. We deal in both wholesale and retail.</p>
 					<br/>
-					 <p align="justify">Mahaveer Paints have started their journey more than 25 years ago in 1997. Since then they have flourished with time and expanded their market. Not only they have dealings in Chhattisgarh but also in Odisha, Madhya Pradesh and Maharashtra. With so many years of experience and many happy customers, Mahaveer Paints provide you with the best service possible    </p>
+					 <p align="justify">Mahaveer Paints have started their journey more than 28 years ago in 1997. Since then they have flourished with time and expanded their market. Not only they have dealings in Chhattisgarh but also in Odisha, Madhya Pradesh and Maharashtra. With so many years of experience and many happy customers, Mahaveer Paints provide you with the best service possible    </p>
                     </br>
                      <p align="justify" style="margin-bottom:10px;">With a large manufacturing unit in Raipur, Chhattisgarh, a wide variety of products including Water Proof Cement Paint,Wall Putty, Primers,Plaster Of Paris, Chalk Powder, Water Proof Compounds are manfucatured and marketed in both wholesale and retail and we ensure the best quality of our products!</p>
                     <!--<div class="btn-box">
